force-app/main/default/objects/COVID_Invoice__c/COVID_Invoice__c.object-meta.xml
<CustomObject>
    <label>COVID Invoice</label>
    <nameField>
        <displayFormat>COVIDINV-{000000}</displayFormat>
        <label>COVID Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COVID Invoice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>