force-app/main/default/objects/COVID_Invoice__c/fields/Actual_Amount_Paid_AUD_NZD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_Paid_AUD_NZD__c</fullName>
    <label>Actual Amount Paid(AUD/NZD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>