force-app/main/default/objects/COVID_Invoice__c/fields/Amount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Amount_Applied__c</fullName>
    <label>Amount Applied</label>
    <summarizedField>COVID_Inv_Line_Items__c.Calculated_Amount__c</summarizedField>
    <summaryForeignKey>COVID_Inv_Line_Items__c.COVID_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>