force-app/main/default/objects/COVID_Invoice__c/fields/Invoice_currency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_currency__c</fullName>
    <label>Invoice currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>