force-app/main/default/objects/COVID_Invoice__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>COVID Invoice</relationshipLabel>
    <relationshipName>COVID_Invoice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>