force-app/main/default/objects/COVID_Invoice__c/recordTypes/Merchant_Credit.recordType-meta.xml
<RecordType>
    <fullName>Merchant_Credit</fullName>
    <active>true</active>
    <label>Merchant Credit</label>
</RecordType>