force-app/main/default/objects/COVID_Invoice__c/recordTypes/Merchant_Refund.recordType-meta.xml
<RecordType>
    <fullName>Merchant_Refund</fullName>
    <active>true</active>
    <label>Merchant Refund</label>
</RecordType>